navbar - overflow fix 3

--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -79,8 +79,12 @@ nav {
 }
 
 @media screen and (max-width: 900px) {
-    nav {
-        overflow-x: hidden;
+    body {
+        overflow: hidden;
+    }
+
+    .main-site {
+        overflow: hidden;
     }
 
     .nav-links {
@@ -95,7 +99,7 @@ nav {
         width: 100%;
         transform: translateX(100%);
         transition: transform 0.5s ease-in;
-        overflow-x: hidden;
+        overflow: hidden;
     }
 
     .nav-links li {
